--- a/blogpost.html
+++ b/blogpost.html
@@ -31,6 +31,9 @@
                 </p>
                 <p>Suscribete y dale like</p>
             </div>
-        </div>
+            <div id="footer">
+	    	<p>Hecho con amor en Platzi &lt;3</p>
+	    </div>
+	</div>
     </body>
 </html>
