--- a/blogpost.html
+++ b/blogpost.html
@@ -19,9 +19,9 @@
                 inicio donde vamos a explicar
                 las cosas incre&iacute;bles que se
                 pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir información y tus ideas.
+                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres
-                un rockstar. Pero estadisticamente no lo eres... Por ahora
+                un rockstar. Pero estad&iacute;sticamente no lo eres... Por ahora
                 </p>
                 <p>Suscribete y dale like</p>
             </div>
